# parallel-usm-vs-bufffer-with-accessor

./: CMakeLists.txt  README.md  build.sh  host.cpp  output.txt
device/: CMakeLists.txt  device_factory.cpp  device_factory.h
kernels/: CMakeLists.txt  do_add.cpp  do_add.h  do_sqr.cpp  do_sqr.h  do_sqrt.cpp  do_sqrt.h
